:white_check_mark: Change overflow option css scroll bug

--- a/assets/styles/account.css
+++ b/assets/styles/account.css
@@ -1,7 +1,7 @@
 .opinion-moderate-container {
     height: auto;
     max-height: 350px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #no-opinions-moderate {
