--- a/assets/styles/product.css
+++ b/assets/styles/product.css
@@ -37,7 +37,7 @@
 
 #img-carousel {
     display: flex;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     border-radius: 0 0 20px 20px;
     padding: 20px;
@@ -78,7 +78,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 2em;
     padding-right: 0;
 }
@@ -92,7 +92,7 @@
     margin-top: 2em;
     height: 100%;
     max-height: 400px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     max-width: 500px;
     padding: 0 1em 1em 1em;
@@ -147,7 +147,7 @@
     gap: 1rem;
     margin: 5dvh 0;
     max-height: 500px;
-    overflow-y:scroll;
+    overflow-y: auto;
 }
 
 .comment-card {
